--- a/vitProfile/src/style.css
+++ b/vitProfile/src/style.css
@@ -30,18 +30,18 @@ body {
   min-height: 100vh;
 }
 
-h1 {
+/* h1 {
   font-size: 3.2em;
   line-height: 1.1;
   padding: 10px;
-}
-
+} */
+/* 
 #MyAPPP {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 #header{
   justify-content: center;
@@ -54,6 +54,7 @@ h1 {
   font-size: 20px;
 
 }
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -79,15 +80,23 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+  font-size: 3em;
+  font-weight: 900;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
+li {
+  list-style-type: none;
+  display:inline-flex;
+  padding: 10px;
+  
+}
 button:hover {
-  border-color: #646cff;
+  border-color: #6e64ff73;
+  filter: drop-shadow(0 0 1em #646cffaa);
 }
 button:focus,
 button:focus-visible {
