--- a/vitProfile/src/pages/home/home.css
+++ b/vitProfile/src/pages/home/home.css
@@ -7,16 +7,57 @@
 
     border-radius: 30px;
     transition: filter 300ms;
+    overflow: hidden;
+}
+
+.gameCompUl{
+    display: flex;
+    width: 600px;
+    height: 400px;
+
+    border-radius: 30px;
+    transition: filter 300ms;
 }
 
 .gameComp:hover{
     filter: drop-shadow(0 0 2em #fa64ff73);
 }
 
+.showPage2Li{
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 15ex;
+    height: 45ex;
+    background-color: 6e64ff73;
+    box-shadow:  0 0 50px #6e64ff73;
+
+    list-style-type: none;
+    display: inline-flex;
+
+    border-radius: 30px;
+    transition: all 300ms ease-in-out;
+}
+
+.showPage2Li:hover{
+    filter: drop-shadow( 0 0 2em #fa64ff73);
+}
+
+.showPage2Li.active{
+    flex: 10;
+}
+
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
-    padding: 10px;
+    padding-left: 10px;
+  }
+
+h2 {
+    font-size: 2.2em;
+    line-height: 1.1;
+    padding-left: 10px;
   }
 
   #MyAPPP {
@@ -25,3 +66,5 @@ h1 {
     padding: 2rem;
     text-align: center;
   }
+
+  
