--- a/vitProfile/src/pages/home/home.css
+++ b/vitProfile/src/pages/home/home.css
@@ -35,10 +35,10 @@
 
 .showPage2Li{
     padding: 5px;
-    align-items: center;
+    align-items: end;
     justify-content: center;
     display: flex;
-    width: 15ex;
+    width: 16ex;
     height: 45ex;
     background-color: 6e64ff73;
     background-size: cover;
@@ -82,7 +82,7 @@
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
-    padding-left: 10px;
+    /* padding-left: 10px; */
     width: 80%;
   }
 
