--- a/vitProfile/src/style.css
+++ b/vitProfile/src/style.css
@@ -15,6 +15,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.underHeaderIcon{
+  background-color: #535bf2;
+  width: 100%;
+
+}
+
+.underHearUl{
+  padding: 0;
+}
+img{
+  width: 100px;
+}
+
+ul{
+  padding: 0;
+  line-height: 0;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -39,10 +56,13 @@ body {
   flex-direction: column;
   display: flex;
   width: 100%;
+  
 }
 
 #underHeader{
   font-size: 20px;
+  list-style-type: none;
+  display: flex;
 }
 
 #iconMe{
@@ -72,7 +92,7 @@ button {
   color: #0f1121
 }
 
-li {
+li{
   list-style-type: none;
   display:inline-flex;
   padding: 10px;
